# DiscordTZ

./: .gitignore  .pre-commit-hooks.yaml  README.md  help.json  main.py  pyproject.toml
.github/workflows/: ruff-action.yml
config/: Config.py
database/: APIKeyDatabase.py  DataDatabase.py  DatabaseSyncer.py
database/stats/: StatsData.py  StatsDatabase.py
modules/: TZBot.py  modBotProfile.py  modChroma.py  modHelp.py  modImage.py  modMathImageGen.py  modModuleManagement.py  modQuote.py  modServerLogging.py  modTzApiKeyManagement.py  modTzControlCommands.py  modTzLink.py
modules/helplib/: Command.py  Module.py
modules/ui/: DecisionActionRow.py  TzApiRequestUI.py
server/: APIServer.py  Api.py  EventHandler.py  ServerCrypto.py  ServerError.py  ServerLogger.py  SocketServer.py
server/auth/: AesKeys.py
server/protocol/: APIPayload.py  Client.py  IP.py  Response.py  TCP.py  UDP.py
server/requests/: AbstractRequests.py  RequestTypes.py  Requests.py
shared/: Graphs.py  Helpers.py  Timezones.py
shell/: Commands.py  Logger.py  Shell.py
